--- a/search/templates/search/base/base.html
+++ b/search/templates/search/base/base.html
@@ -1,3 +1,6 @@
+{% load bootstrap3 %}
+{% load render_table from django_tables2 %}
+{% load export_url from django_tables2 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
