Tweaked header size, column name consistency

--- a/search/templates/search/includes/filtered_table.html
+++ b/search/templates/search/includes/filtered_table.html
@@ -18,7 +18,8 @@
     .hero-image {
       background-image: url({% static 'search/assets/website_header_template.png' %});
       background-color: #cccccc;
-      height: 400px;
+      height: 250px;
+      width: 100%;
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
